@@ -439,6 +439,7 @@ class Partition:
 	_mb = ""
 	_mkfsopts = None
 	_resized = False
+	_extra_dict = None
 	
 	##
 	# Initialization function for the Partition class
@@ -467,6 +468,7 @@ class Partition:
 		self._mkfsopts = mkfsopts
 		self._resizeable = False
 		self._resized = resized
+		self._exta_dict = {}
 		if type != "free":
 			if existing and not origminor:
 				self._orig_minor = self._minor
@@ -501,6 +503,43 @@ class Partition:
 					self._resizeable = True
 			except:
 				self._resizeable = False
+
+	def __getattr__(self, name):
+		tmpdict = { 'start': self.get_start,
+                    'end': self.get_end,
+                    'format': self.get_format,
+                    'type': self.get_type,
+                    'resized': self.get_resized
+                    'minor': self.get_minor,
+                    'mb': self.get_mb,
+                    'origminor': self.get_origminor,
+                    'mountpoint': self.get_mountpoint,
+                    'mountopts': self.get_mountopts,
+                    'mkfsopts': self.get_mkfsopts
+                  }
+		if name in tmpdict:
+			return tmpdict[name]()
+		if name in self._extra_dict:
+			return self._extra_dict[name]
+		return None
+
+	def __setattr__(self, name, value):
+		tmpdict = { 'start': self.set_start,
+                    'end': self.set_end,
+                    'format': self.set_format,
+                    'type': self.set_type,
+                    'resized': self.set_resized
+                    'minor': self.set_minor,
+                    'mb': self.set_mb,
+                    'origminor': self.set_origminor,
+                    'mountpoint': self.set_mountpoint,
+                    'mountopts': self.set_mountopts,
+                    'mkfsopts': self.set_mkfsopts
+                  }
+		if name in tmpdict:
+			tmpdict[name](value)
+		else:
+			self._extra_dict[name] = value
 
 	##
 	# Returns whether or not the partition is extended
